fix: QFab | QFabAction - Unset or incorrect Z-index #938

--- a/src/components/ajax-bar/ajax-bar.mat.styl
+++ b/src/components/ajax-bar/ajax-bar.mat.styl
@@ -1,6 +1,6 @@
 .q-loading-bar
   position fixed
-  z-index $z-absolute
+  z-index $z-max
   transition all .2s cubic-bezier(0, 0, .2, 1)
 
   &.top
