--- a/src/components/carousel/carousel.ios.styl
+++ b/src/components/carousel/carousel.ios.styl
@@ -1,7 +1,7 @@
 .q-carousel
   overflow hidden
   &.fullscreen
-    z-index $z-absolute
+    z-index $z-max
 
 .q-carousel-inner
   position relative
